# hoi4_province_editor

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: hoi4pe_config_default.toml
src/: app.rs  config.rs  error.rs  events.rs  font.rs  i18n.rs  main.rs  util.rs
src/app/: alerts.rs  canvas.rs  command.rs  console.rs  format.rs  interface.rs  map.rs
src/app/format/: adjacency.rs  csv.rs  definition.rs
src/app/format/samples/: adjacencies.csv  definition.csv
src/app/map/: bridge.rs  history.rs  problems.rs
src/app/map/history/: relative.rs
src/util/: csv.rs  files.rs  hsl.rs  random.rs  uord.rs
