[package]
name = "hoi4_province_editor"
version = "0.4.0"
authors = ["ScottyThePilot <scotty.codes@gmail.com>"]
edition = "2024"
description = "Map editor application for Hearts of Iron IV"
readme = "README.md"
repository = "https://github.com/ScottyThePilot/hoi4_province_editor"
license = "MIT"

[dependencies]
ahash = { version = "0.8.12", features = ["serde"] }
chrono = "0.4"
color-backtrace = "0.7"
csv = "1.3.1"
dunce = "1.0"
fs-err = "3.1.2"
geo = "0.20"
glutin = "0.26"
image = { version = "~0.24.9", features = ["bmp", "png", "rayon"], default-features = false }
itertools = "0.10"
native-dialog = "0.6"
once_cell = "1.21"
piston = "0.53"
piston2d-graphics = { version = "0.42", features = ["glyph_cache_rusttype"] }
piston2d-opengl_graphics = "0.81"
pistoncore-glutin_window = "0.70"
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1.11"
rusttype = "0.9"
serde = { version = "1.0", features = ["derive"] }
termcolor = "1.4"
thiserror = "1.0"
toml = "0.5"
vecmath = "1.0"
zip = "0.6"

[dependencies.defy]
git = "https://github.com/ScottyThePilot/misc-crates"

[dependencies.unicase]
git = "https://github.com/ScottyThePilot/misc-crates"

[profile.dev]
opt-level = 1
debug = "full"

[profile.release]
opt-level = 3
debug = "full"

[features]
debug-mode = []
